docs(release): the v0.11 notes did not mention the milestone's headline
Both the release notes and the CHANGELOG's [Unreleased] block predated ADR-066
and carried no trace of it — no "preview-clean", no "JDK 25", no mention that
the distributed artifact stops imposing --enable-preview on its consumers. That
is the item the whole platform-baseline stream existed to produce, and the one
an LTS-only consumer is waiting for.

Written to describe BOTH artifacts in one document rather than forking into a
second file. The milestone ships 0.11.0 and 0.11.0-preview; they carry the same
kernel and differ on one axis plus the build that follows from it, so a table
says it once and a reader comparing the two sees them side by side. It also
means the file merges up to the preview line unchanged instead of becoming a
permanent conflict — the same reason the SPI javadocs were rewritten to be true
on both lines.

Three consumer-visible BEHAVIOUR changes are now stated, not just the build one.
They are the half a reader would otherwise meet in production:

- EventBus.publishAndAwait runs handlers on the calling thread, so handler
  durations sum rather than overlap and a slow handler delays its successors.
  What it buys is the contract: a handler still observes every scoped value the
  publisher bound, including the application's own, which no fork-based GA
  mechanism can deliver.
- Subsystem start runs on the booting thread, so a phase costs the sum of its
  subsystems' start times rather than the longest.
- A failed subsystem in a parallel phase now throws BootstrapException instead
  of the unchecked preview type StructuredTaskScope.FailedException. Anyone
  catching that type must remove it — stated as an action, not as a note.

The preview line's cost is stated in the notes too rather than left implicit:
three gates (PMD, ArchUnit, JaCoCo) cannot run on an EA JDK because class-file
readers ship support after a JDK releases, so their coverage is inherited from
the distributed 